--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
         <section class="section">
             <div class="container">Outra section</div>
         </section>
+        <section class="section">
+            <div class="container">Outra section</div>
+        </section>
     </main>
     <script src="main.js"></script>
 </body>
