Adicionado Scroll Reveal

--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
     <!-- Swiperjs -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
+    <!-- Scroll Reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
     <!-- Main.js -->
     <script src="main.js"></script>
 </body>
