--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="text">
                     <h2 class="title">Saúde natural para os seus cabelos</h2>
-                    <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
+                    <p class="subtitle">Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
                     <a class="button" href="#">Agendar um horário</a>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                 <p>©2022 Beautysalon.</p>
                 <p>Todos os direitos reservados.</p>
             </div>
-            <div class="social">
+            <div class="social grid">
                 <a href="#" target="blank">
                     <i class="icon-instagram"></i>
                 </a>
